Fix z-index issue overlap in land.css, added value $$usertype and used it as demo

--- a/htdocs/land.css
+++ b/htdocs/land.css
@@ -9,7 +9,6 @@ div.top.land {
     width: 96%;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
-    z-index: 1;
     border-bottom: none;
     box-shadow: 0 0 20px rgba(0, 80, 155, 0.82);
 }
@@ -26,7 +25,6 @@ div.menubar {
     width: 100%;
     background-color: rgba(25, 58, 92, 0.95);
     box-shadow: 0 0 1em rgba(25, 58, 92, 0.88);
-    z-index: 10;
 }
 ul.tabs {
     color: #fff;
